testcases/bad/str_out_of_bounds.cl
class Main inherits IO{
    main(): Object {
        let s: String <- "hello" in
        s.substr(0,10)
        
    };

};